gitops/apps/training-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: training
  labels:
    app.kubernetes.io/part-of: training-workload
