gitops/apps/training-app/base/cache-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: training
  labels:
    app: redis-cache
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: redis-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
  namespace: training
  labels:
    app: redis-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
